--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     />
     <script src="table_map.js" type="text/javascript"></script>
     <script src="canvas_elements.js" type="text/javascript"></script>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/320/apple/237/hot-beverage_2615.png"
+    />
 
-    <title>Tablemap</title>
+    <title>Table Map Editor</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
